2002-12-18  Andrew Cagney  <ac131313@redhat.com>

	* rs6000-tdep.c (rs6000_init_extra_frame_info): Use
	frame_extra_info_zalloc.
	(rs6000_frame_args_address): Use get_frame_extra_info.
	(frame_get_saved_regs): Use get_frame_saved_regs.
	(frame_initial_stack_address): Use get_frame_saved_regs and
	get_frame_extra_info.
	(frame_initial_stack_address): Use get_frame_extra_info.

2002-12-17  Kevin Buettner  <kevinb@redhat.com>

	* dve3900-rom.c (r3900_regnames): Don't use NUM_REGS to determine
	array size.
	(fetch_bitmapped_register, store_bitmapped_register): Add bounds
	checks for r3900_regnames[].

2002-12-17  Richard Earnshaw  <rearnsha@arm.com>

	* armnbsd-tdep.c (ARM_NBSD_JB_PC): Renamed from JB_PC.
	All uses changed
	(ARM_NBSD_JB_ELELMENT_SIZE): Similarly.

2002-12-17  David Carlton  <carlton@math.stanford.edu>

	* symtab.c (lookup_partial_symbol): Don't search past the end of
	the partial symbols.

2002-12-17  Andrew Cagney  <ac131313@redhat.com>

	* stack.c (frame_info): Use get_frame_saved_regs.
	* breakpoint.c (until_break_command): Use get_frame_pc.

2002-12-16  Kevin Buettner  <kevinb@redhat.com>

	* buildsym.c (block_end_complaint, anon_block_end_complaint)
	(innerblock_complaint, innerblock_anon_complaint)
	(blockvector_complaint): Delete deprecated complaint structs.
	(finish_block, make_blockvector, end_symtab): Replace calls
	to complain() with calls to complaint().
	* coffread.c (ef_complaint, ef_stack_complaint, eb_stack_complaint)
	(bf_no_aux_complaint, ef_no_aux_complaint, lineno_complaint)
	(unexpected_type_complaint, bad_sclass_complaint)
	(misordered_blocks_complaint, tagndx_bad_complaint, eb_complaint):
	Delete deprecated complaint structs.
	(coff_symtab_read, enter_linenos, decode_type, decode_base_type):
	Replace calls to complain() with calls to complaint().
	* dbxread.c (lbrac_complaint, string_table_offset_complaint)
	(unknown_symtype_complaint, unknown_symchar_complaint)
	(lbrac_rbrac_complaint, lbrac_unmatched_complaint)